$Id$
---------------------------------------------------------------------------

Version 0.4.4 (...)

- Fixed a small bug with the ConfigurationError exception class, improving
  error messages.
- Added ".about" metacommand.

---------------------------------------------------------------------------
Version 0.4.3 (5 November, 2008)

- Slightly better error handling.

---------------------------------------------------------------------------
Version 0.4.2 (5 November, 2008)

- Now pre-reqs Grizzled version 0.8.4 or better, to provide decent Oracle
  support. Tested against Oracle XE 10.2 for Linux.

---------------------------------------------------------------------------
Version 0.4.1 (4 November, 2008)

- Unknown "." commands are no longer passed through to the database engine
  by default, resulting in better error messages.
- The "help variables" topic is now "help settings".

---------------------------------------------------------------------------
Version 0.4 (3 November, 2008)

- Now calls grizzled.cmdline.CommandLineParser's die_with_usage() method,
  instead of the deprecated show_usage() method.
- Now supports shell-style variables. See the User's Guide for details.

---------------------------------------------------------------------------
Version 0.3.2 (8 September, 2008)

- Now properly bundles ez_setup.py
- Now supports Gadfly (http://gadfly.sourceforge.net/)

---------------------------------------------------------------------------
Version 0.3.1 (5 August, 2008)

- Fixed bug with --database option introduced in version 0.3
- When loading a file (via ".load" at the prompt or @file on the command line),
  sqlcmd no longer adds the contents to the history.

---------------------------------------------------------------------------
Version 0.3 (22 July, 2008)

- Ctrl-C (SIGINT) at the command prompt now simply returns to the command
  prompt without doing anything, instead of exiting sqlcmd. Thanks to James